--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@
     justify-content: center;
     align-items: center;
     border: 5px solid black;
-    width: 30%;
+    width: 25%;
     margin: 5px auto;
     border-radius: 15px;
     background-color: rgb(136, 135, 135);
@@ -45,7 +45,7 @@
     padding: 20px;
     border: 2px solid black;
     border-radius: 5px;
-    font-size: 23px;
+    width: 85%;
+    font-size: 1.5rem;
     background-color: antiquewhite;
-
 }
